--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Template - Landing 1</title>
+    <title>Catche</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -14,13 +14,10 @@
 
 <body>
 
-    <!-- Main Nav -->
     <nav class="mainNav"></nav>
-    <!-- end Main Nav -->
-
     <header class="sliderHeading white neu-09"></header>
     <section class="infoIcons neu-01"></section>
-    <section class="contentMedia neu-01 one"></section>
+    <section class="contentMedia neu-02 one"></section>
     <section class="productSlider neu-09 white"></section>
     <section class="contentMedia neu-01 two right"></section>
     <section class="ctaBlock one neu-08"></section>
