--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Catche</title>
+    <title>Catche | by BRIX</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <meta name="description"
+        content="Landing page concept for a website selling modern and high quality watches' brands.">
+    <meta property="og:title" content="Catche | by BRIX">
+    <meta property="og:description"
+        content="Landing page concept for a website selling modern and high quality watches' brands.">
+    <meta name="image" property="og:image" content="assets/images/fb_thumb.jpg">
+    <meta property="og:url" content="https://brixcreative.github.io/catche>
 
 </head>
 
 <body>
 
-    <nav class="mainNav"></nav>
-    <header class="sliderHeading white neu-09"></header>
+    <nav class=" mainNav">
+    </nav>
+    <header class="sliderHeading white neu-09" id="home"></header>
     <section class="infoIcons neu-01"></section>
-    <section class="contentMedia neu-02 one"></section>
-    <section class="productSlider neu-09 white"></section>
+    <section class="contentMedia neu-02 one" id="about"></section>
+    <section class="productSlider neu-09 white" id="products"></section>
     <section class="contentMedia neu-01 two right"></section>
-    <section class="ctaBlock one neu-08"></section>
+    <section class="ctaBlock one neu-08" id="contacts"></section>
     <footer class="footer"></footer>
 
     <!-- Script Files -->
@@ -32,6 +41,6 @@
     <!-- end Script Files -->
 
 
-</body>
+    </body>
 
 </html>
