--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description"
         content="Landing page concept for a website selling modern and high quality watches' brands.">
     <meta name="image" property="og:image" content="assets/images/fb_thumb.jpg">
-    <meta property="og:url" content="https://brixcreative.github.io/catche>
+    <meta property="og:url" content="https://brixcreative.github.io/catche">
 
 </head>
 
@@ -41,6 +41,6 @@
     <!-- end Script Files -->
 
 
-    </body>
+</body>
 
 </html>
