--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
+    <link rel="shortcut icon" href="assets/favicon.ico">
     <meta name="description"
         content="Landing page concept for a website selling modern and high quality watches' brands.">
     <meta property="og:title" content="Catche | by BRIX">
