--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <link rel="shortcut icon" href="assets/favicon.ico">
     <meta name="description"
-        content="Landing page concept for a website selling modern and high quality watches' brands.">
+        content="Landing page concept for a website selling modern and high quality watches' brands. Designed by BRIX Creative.">
     <meta property="og:title" content="Catche | by BRIX">
     <meta property="og:description"
-        content="Landing page concept for a website selling modern and high quality watches' brands.">
+        content="Landing page concept for a website selling modern and high quality watches' brands. Designed by BRIX Creative.">
     <meta name="image" property="og:image" content="assets/images/fb_thumb.jpg">
     <meta property="og:url" content="https://brixcreative.github.io/catche">
 
