--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <section class="contentMedia neu-02 one" id="about"></section>
     <section class="productSlider neu-09 white" id="products"></section>
     <section class="contentMedia neu-01 two right"></section>
-    <section class="ctaBlock one neu-08" id="contacts"></section>
+    <section class="highlightSlider testimonials white"></section>
+    <section class="ctaBlock one neu-01" id="contacts"></section>
     <footer class="footer"></footer>
 
     <!-- Script Files -->
